// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dateInputField > should clear field 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0px, 4px, 0);
    -moz-transform: translate3d(0px, 4px, 0);
    -ms-transform: translate3d(0px, 4px, 0);
    transform: translate3d(0px, 4px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0px, 4px, 0);
    -moz-transform: translate3d(0px, 4px, 0);
    -ms-transform: translate3d(0px, 4px, 0);
    transform: translate3d(0px, 4px, 0);
  }
}

.emotion-0 {
  display: contents;
}

.emotion-2 {
  width: 100%;
}

.emotion-4 {
  display: inherit;
}

.emotion-4[data-container-full-height="true"] {
  height: 100%;
}

.emotion-4[data-container-full-width="true"] {
  width: 100%;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-8>.emotion-11 {
  color: #3f4250;
}

.emotion-8>.emotion-11::-webkit-input-placeholder {
  color: #727683;
}

.emotion-8>.emotion-11::-moz-placeholder {
  color: #727683;
}

.emotion-8>.emotion-11:-ms-input-placeholder {
  color: #727683;
}

.emotion-8>.emotion-11::placeholder {
  color: #727683;
}

.emotion-8[data-success='true'] {
  border-color: #22674e;
}

.emotion-8[data-error='true'] {
  border-color: #b3144d;
}

.emotion-8[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-8[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-8[data-disabled='true']>.emotion-11 {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11::placeholder {
  color: #b5b7bd;
}

.emotion-8:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-10 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-10[data-size='large'] {
  font-size: 1rem;
}

.emotion-10[data-size='small'] {
  padding-left: 0.5rem;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0 1rem;
  border-left: 1px solid;
  border-color: inherit;
}

.emotion-14 {
  vertical-align: middle;
  fill: #3f4250;
  height: 1.25rem;
  width: 1.25rem;
  min-width: 1.25rem;
  min-height: 1.25rem;
}

.emotion-14 .fillStroke {
  stroke: #3f4250;
  fill: none;
}

.emotion-17 {
  background: #151a2d;
  color: #ffffff;
  border-radius: 0.25rem;
  padding: 0.25rem 0.5rem;
  text-align: center;
  position: absolute;
  max-width: 16.5rem;
  overflow-wrap: break-word;
  font-size: 0.8rem;
  inset: 0 auto auto 0;
  top: 0;
  left: 0;
  opacity: 0;
  z-index: 1;
  -webkit-transform: translate3d(0px, 4px, 0);
  -moz-transform: translate3d(0px, 4px, 0);
  -ms-transform: translate3d(0px, 4px, 0);
  transform: translate3d(0px, 4px, 0);
  width: 100%;
  color: #3f4250;
  padding: 1rem;
  border-radius: 0.25rem;
  background-color: #ffffff;
  box-shadow: 0px 4px 8px 0px #22263829,0px 8px 24px 0px #2226383d;
}

.emotion-17[data-animated="true"] {
  -webkit-animation: 0ms animation-0 forwards;
  animation: 0ms animation-0 forwards;
}

.emotion-17[data-has-arrow="true"]::after {
  content: " ";
  position: absolute;
  top: -5px;
  left: 0px;
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  margin-left: -8px;
  border-width: 8px;
  border-style: solid;
  border-color: #151a2d transparent transparent transparent;
  pointer-events: none;
}

.emotion-17[data-visible-in-dom="false"] {
  display: none;
}

.emotion-17>.emotion-20 {
  max-height: 100%;
}

.emotion-19[data-max-height="true"] {
  overflow: auto;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1rem;
}

.emotion-23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-25 {
  vertical-align: middle;
  fill: currentColor;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-25 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-28 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: capitalize;
}

.emotion-32 {
  display: grid;
  grid-template-columns: repeat(7, 1fr);
  gap: 0.5rem;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-35 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  text-transform: lowercase;
}

.emotion-35::first-letter {
  text-transform: uppercase;
}

.emotion-55 {
  height: 1.5625rem;
  width: 100%;
  padding: 0;
  color: #727683;
}

.emotion-55[aria-label="in-range"] {
  color: #521094;
  background-color: #f1eefc;
}

.emotion-55[aria-label="in-range"]:hover {
  color: #ffffff;
  background-color: #792dd4;
}

.emotion-55[aria-label="not-current"],
.emotion-55:disabled {
  color: #b5b7bd;
}

.emotion-55[aria-label="selected"] {
  color: #ffffff;
}

<div
    data-testid="testing"
  >
    <form
      class="emotion-0 emotion-1"
      novalidate=""
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          aria-controls="_r_3k_"
          aria-describedby="_r_3k_"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <div
            class="emotion-6 emotion-7"
          >
            <div>
              <div
                class="emotion-8 emotion-9"
                data-disabled="false"
                data-error="false"
                data-readonly="false"
                data-success="false"
              >
                <input
                  aria-invalid="false"
                  autocomplete="false"
                  class="emotion-10 emotion-11"
                  data-size="large"
                  id="_r_3l_"
                  name="test"
                  placeholder="YYYY-MM-DD"
                  type="text"
                  value=""
                />
                <div
                  class="emotion-12 emotion-13"
                >
                  <svg
                    class="emotion-14 emotion-15"
                    viewBox="0 0 20 20"
                  >
                    <path
                      d="M5.25 12a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H6a.75.75 0 0 1-.75-.75zM6 13.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V14a.75.75 0 0 0-.75-.75zM7.25 12a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H8a.75.75 0 0 1-.75-.75zM8 13.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V14a.75.75 0 0 0-.75-.75zM9.25 10a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H10a.75.75 0 0 1-.75-.75zm.75 1.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V12a.75.75 0 0 0-.75-.75zM9.25 14a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H10a.75.75 0 0 1-.75-.75zM12 9.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V10a.75.75 0 0 0-.75-.75zM11.25 12a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H12a.75.75 0 0 1-.75-.75zm.75 1.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V14a.75.75 0 0 0-.75-.75zM13.25 10a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H14a.75.75 0 0 1-.75-.75zm.75 1.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V12a.75.75 0 0 0-.75-.75z"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M5.75 2a.75.75 0 0 1 .75.75V4h7V2.75a.75.75 0 0 1 1.5 0V4h.25A2.75 2.75 0 0 1 18 6.75v8.5A2.75 2.75 0 0 1 15.25 18H4.75A2.75 2.75 0 0 1 2 15.25v-8.5A2.75 2.75 0 0 1 4.75 4H5V2.75A.75.75 0 0 1 5.75 2m-1 5.5c-.69 0-1.25.56-1.25 1.25v6.5c0 .69.56 1.25 1.25 1.25h10.5c.69 0 1.25-.56 1.25-1.25v-6.5c0-.69-.56-1.25-1.25-1.25z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            class="emotion-16 emotion-17 emotion-18"
            data-animated="false"
            data-has-arrow="false"
            id="_r_3k_"
            role="dialog"
            style="opacity: 1;"
          >
            <div
              class="emotion-19 emotion-20"
              data-max-height="false"
            >
              <div
                class="emotion-21 emotion-7"
              >
                <div
                  class="emotion-23 emotion-7"
                >
                  <button
                    class=" uv_e1wcoe0 uv_e1wcoe4 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                    data-testid="previous-month"
                    type="button"
                  >
                    <svg
                      class="emotion-25 emotion-15"
                      viewBox="0 0 16 16"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M10.53 4.22a.75.75 0 0 1 0 1.06L7.81 8l2.72 2.72a.75.75 0 1 1-1.06 1.06L6.22 8.53a.75.75 0 0 1 0-1.06l3.25-3.25a.75.75 0 0 1 1.06 0"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </button>
                  <span
                    class="emotion-27 emotion-28 emotion-29"
                  >
                    September 2022
                  </span>
                  <button
                    class=" uv_e1wcoe0 uv_e1wcoe4 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                    data-testid="next-month"
                    type="button"
                  >
                    <svg
                      class="emotion-25 emotion-15"
                      viewBox="0 0 16 16"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M6.22 4.22a.75.75 0 0 1 1.06 0l3.25 3.25a.75.75 0 0 1 0 1.06l-3.25 3.25a.75.75 0 0 1-1.06-1.06L8.94 8 6.22 5.28a.75.75 0 0 1 0-1.06"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </button>
                </div>
                <div
                  class="emotion-32 emotion-33"
                >
                  <p
                    class="emotion-34 emotion-35 emotion-29"
                  >
                    Mo
                  </p>
                  <p
                    class="emotion-34 emotion-35 emotion-29"
                  >
                    Tu
                  </p>
                  <p
                    class="emotion-34 emotion-35 emotion-29"
                  >
                    We
                  </p>
                  <p
                    class="emotion-34 emotion-35 emotion-29"
                  >
                    Th
                  </p>
                  <p
                    class="emotion-34 emotion-35 emotion-29"
                  >
                    Fr
                  </p>
                  <p
                    class="emotion-34 emotion-35 emotion-29"
                  >
                    Sa
                  </p>
                  <p
                    class="emotion-34 emotion-35 emotion-29"
                  >
                    Su
                  </p>
                  <button
                    aria-label="not-current"
                    class="emotion-55 emotion-56 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                    data-testid="dayLastMonth"
                    type="button"
                  >
                    29
                  </button>
                  <button
                    aria-label="not-current"
                    class="emotion-55 emotion-56 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                    data-testid="dayLastMonth"
                    type="button"
                  >
                    30
                  </button>
                  <button
                    aria-label="not-current"
                    class="emotion-55 emotion-56 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                    data-testid="dayLastMonth"
                    type="button"
                  >
                    31
                  </button>
                  <button
                    aria-label="selected"
                    class="emotion-55 emotion-56 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoeg uv_e1wcoe7 uv_e1wcoel"
                    type="button"
                  >
                    1
                  </button>
                  <button
                    aria-label="neutral"
                    class="emotion-55 emotion-56 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                    type="button"
                  >
                    2
                  </button>
                  <button
                    aria-label="neutral"
                    class="emotion-55 emotion-56 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                    type="button"
                  >
                    3
                  </button>
                  <button
                    aria-label="neutral"
                    class="emotion-55 emotion-56 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                    type="button"
                  >
                    4
                  </button>
                  <button
                    aria-label="neutral"
                    class="emotion-55 emotion-56 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                    type="button"
                  >
                    5
                  </button>
                  <button
                    aria-label="neutral"
                    class="emotion-55 emotion-56 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                    type="button"
                  >
                    6
                  </button>
                  <button
                    aria-label="neutral"
                    class="emotion-55 emotion-56 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                    type="button"
                  >
                    7
                  </button>
                  <button
                    aria-label="neutral"
                    class="emotion-55 emotion-56 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                    type="button"
                  >
                    8
                  </button>
                  <button
                    aria-label="neutral"
                    class="emotion-55 emotion-56 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                    type="button"
                  >
                    9
                  </button>
                  <button
                    aria-label="neutral"
                    class="emotion-55 emotion-56 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                    type="button"
                  >
                    10
                  </button>
                  <button
                    aria-label="neutral"
                    class="emotion-55 emotion-56 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                    type="button"
                  >
                    11
                  </button>
                  <button
                    aria-label="neutral"
                    class="emotion-55 emotion-56 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                    type="button"
                  >
                    12
                  </button>
                  <button
                    aria-label="neutral"
                    class="emotion-55 emotion-56 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                    type="button"
                  >
                    13
                  </button>
                  <button
                    aria-label="neutral"
                    class="emotion-55 emotion-56 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                    type="button"
                  >
                    14
                  </button>
                  <button
                    aria-label="neutral"
                    class="emotion-55 emotion-56 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                    type="button"
                  >
                    15
                  </button>
                  <button
                    aria-label="neutral"
                    class="emotion-55 emotion-56 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                    type="button"
                  >
                    16
                  </button>
                  <button
                    aria-label="neutral"
                    class="emotion-55 emotion-56 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                    type="button"
                  >
                    17
                  </button>
                  <button
                    aria-label="neutral"
                    class="emotion-55 emotion-56 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                    type="button"
                  >
                    18
                  </button>
                  <button
                    aria-label="neutral"
                    class="emotion-55 emotion-56 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                    type="button"
                  >
                    19
                  </button>
                  <button
                    aria-label="neutral"
                    class="emotion-55 emotion-56 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                    type="button"
                  >
                    20
                  </button>
                  <button
                    aria-label="neutral"
                    class="emotion-55 emotion-56 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                    type="button"
                  >
                    21
                  </button>
                  <button
                    aria-label="neutral"
                    class="emotion-55 emotion-56 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                    type="button"
                  >
                    22
                  </button>
                  <button
                    aria-label="neutral"
                    class="emotion-55 emotion-56 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                    type="button"
                  >
                    23
                  </button>
                  <button
                    aria-label="neutral"
                    class="emotion-55 emotion-56 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                    type="button"
                  >
                    24
                  </button>
                  <button
                    aria-label="neutral"
                    class="emotion-55 emotion-56 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                    type="button"
                  >
                    25
                  </button>
                  <button
                    aria-label="neutral"
                    class="emotion-55 emotion-56 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                    type="button"
                  >
                    26
                  </button>
                  <button
                    aria-label="neutral"
                    class="emotion-55 emotion-56 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                    type="button"
                  >
                    27
                  </button>
                  <button
                    aria-label="neutral"
                    class="emotion-55 emotion-56 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                    type="button"
                  >
                    28
                  </button>
                  <button
                    aria-label="neutral"
                    class="emotion-55 emotion-56 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                    type="button"
                  >
                    29
                  </button>
                  <button
                    aria-label="neutral"
                    class="emotion-55 emotion-56 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                    type="button"
                  >
                    30
                  </button>
                  <button
                    aria-label="not-current"
                    class="emotion-55 emotion-56 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                    data-testid="dayNextMonth"
                    type="button"
                  >
                    1
                  </button>
                  <button
                    aria-label="not-current"
                    class="emotion-55 emotion-56 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                    data-testid="dayNextMonth"
                    type="button"
                  >
                    2
                  </button>
                  <button
                    aria-label="not-current"
                    class="emotion-55 emotion-56 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                    data-testid="dayNextMonth"
                    type="button"
                  >
                    3
                  </button>
                  <button
                    aria-label="not-current"
                    class="emotion-55 emotion-56 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                    data-testid="dayNextMonth"
                    type="button"
                  >
                    4
                  </button>
                  <button
                    aria-label="not-current"
                    class="emotion-55 emotion-56 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                    data-testid="dayNextMonth"
                    type="button"
                  >
                    5
                  </button>
                  <button
                    aria-label="not-current"
                    class="emotion-55 emotion-56 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                    data-testid="dayNextMonth"
                    type="button"
                  >
                    6
                  </button>
                  <button
                    aria-label="not-current"
                    class="emotion-55 emotion-56 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                    data-testid="dayNextMonth"
                    type="button"
                  >
                    7
                  </button>
                  <button
                    aria-label="not-current"
                    class="emotion-55 emotion-56 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                    data-testid="dayNextMonth"
                    type="button"
                  >
                    8
                  </button>
                  <button
                    aria-label="not-current"
                    class="emotion-55 emotion-56 uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                    data-testid="dayNextMonth"
                    type="button"
                  >
                    9
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`dateInputField > should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: contents;
}

.emotion-2 {
  width: 100%;
}

.emotion-4 {
  display: inherit;
}

.emotion-4[data-container-full-height="true"] {
  height: 100%;
}

.emotion-4[data-container-full-width="true"] {
  width: 100%;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-8>.emotion-11 {
  color: #3f4250;
}

.emotion-8>.emotion-11::-webkit-input-placeholder {
  color: #727683;
}

.emotion-8>.emotion-11::-moz-placeholder {
  color: #727683;
}

.emotion-8>.emotion-11:-ms-input-placeholder {
  color: #727683;
}

.emotion-8>.emotion-11::placeholder {
  color: #727683;
}

.emotion-8[data-success='true'] {
  border-color: #22674e;
}

.emotion-8[data-error='true'] {
  border-color: #b3144d;
}

.emotion-8[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-8[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-8[data-disabled='true']>.emotion-11 {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11::placeholder {
  color: #b5b7bd;
}

.emotion-8:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-10 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-10[data-size='large'] {
  font-size: 1rem;
}

.emotion-10[data-size='small'] {
  padding-left: 0.5rem;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0 1rem;
  border-left: 1px solid;
  border-color: inherit;
}

.emotion-14 {
  vertical-align: middle;
  fill: #3f4250;
  height: 1.25rem;
  width: 1.25rem;
  min-width: 1.25rem;
  min-height: 1.25rem;
}

.emotion-14 .fillStroke {
  stroke: #3f4250;
  fill: none;
}

<div
    data-testid="testing"
  >
    <form
      class="emotion-0 emotion-1"
      novalidate=""
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          aria-controls="_r_0_"
          aria-describedby="_r_0_"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <div
            class="emotion-6 emotion-7"
          >
            <div>
              <div
                class="emotion-8 emotion-9"
                data-disabled="false"
                data-error="false"
                data-readonly="false"
                data-success="false"
              >
                <input
                  aria-invalid="false"
                  autocomplete="false"
                  class="emotion-10 emotion-11"
                  data-size="large"
                  id="_r_1_"
                  name="test"
                  type="text"
                />
                <div
                  class="emotion-12 emotion-13"
                >
                  <svg
                    class="emotion-14 emotion-15"
                    viewBox="0 0 20 20"
                  >
                    <path
                      d="M5.25 12a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H6a.75.75 0 0 1-.75-.75zM6 13.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V14a.75.75 0 0 0-.75-.75zM7.25 12a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H8a.75.75 0 0 1-.75-.75zM8 13.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V14a.75.75 0 0 0-.75-.75zM9.25 10a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H10a.75.75 0 0 1-.75-.75zm.75 1.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V12a.75.75 0 0 0-.75-.75zM9.25 14a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H10a.75.75 0 0 1-.75-.75zM12 9.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V10a.75.75 0 0 0-.75-.75zM11.25 12a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H12a.75.75 0 0 1-.75-.75zm.75 1.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V14a.75.75 0 0 0-.75-.75zM13.25 10a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H14a.75.75 0 0 1-.75-.75zm.75 1.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V12a.75.75 0 0 0-.75-.75z"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M5.75 2a.75.75 0 0 1 .75.75V4h7V2.75a.75.75 0 0 1 1.5 0V4h.25A2.75 2.75 0 0 1 18 6.75v8.5A2.75 2.75 0 0 1 15.25 18H4.75A2.75 2.75 0 0 1 2 15.25v-8.5A2.75 2.75 0 0 1 4.75 4H5V2.75A.75.75 0 0 1 5.75 2m-1 5.5c-.69 0-1.25.56-1.25 1.25v6.5c0 .69.56 1.25 1.25 1.25h10.5c.69 0 1.25-.56 1.25-1.25v-6.5c0-.69-.56-1.25-1.25-1.25z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`dateInputField > should render correctly disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: contents;
}

.emotion-2 {
  width: 100%;
}

.emotion-4 {
  display: inherit;
}

.emotion-4[data-container-full-height="true"] {
  height: 100%;
}

.emotion-4[data-container-full-width="true"] {
  width: 100%;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-8>.emotion-11 {
  color: #3f4250;
}

.emotion-8>.emotion-11::-webkit-input-placeholder {
  color: #727683;
}

.emotion-8>.emotion-11::-moz-placeholder {
  color: #727683;
}

.emotion-8>.emotion-11:-ms-input-placeholder {
  color: #727683;
}

.emotion-8>.emotion-11::placeholder {
  color: #727683;
}

.emotion-8[data-success='true'] {
  border-color: #22674e;
}

.emotion-8[data-error='true'] {
  border-color: #b3144d;
}

.emotion-8[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-8[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-8[data-disabled='true']>.emotion-11 {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11::placeholder {
  color: #b5b7bd;
}

.emotion-8:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-10 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-10[data-size='large'] {
  font-size: 1rem;
}

.emotion-10[data-size='small'] {
  padding-left: 0.5rem;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0 1rem;
  border-left: 1px solid;
  border-color: inherit;
}

.emotion-14 {
  vertical-align: middle;
  fill: #b5b7bd;
  height: 1.25rem;
  width: 1.25rem;
  min-width: 1.25rem;
  min-height: 1.25rem;
}

.emotion-14 .fillStroke {
  stroke: #b5b7bd;
  fill: none;
}

<div
    data-testid="testing"
  >
    <form
      class="emotion-0 emotion-1"
      novalidate=""
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          aria-controls="_r_3_"
          aria-describedby="_r_3_"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <div
            class="emotion-6 emotion-7"
          >
            <div>
              <div
                class="emotion-8 emotion-9"
                data-disabled="true"
                data-error="false"
                data-readonly="false"
                data-success="false"
              >
                <input
                  aria-invalid="false"
                  autocomplete="false"
                  class="emotion-10 emotion-11"
                  data-size="large"
                  disabled=""
                  id="_r_4_"
                  name="test"
                  type="text"
                />
                <div
                  class="emotion-12 emotion-13"
                >
                  <svg
                    class="emotion-14 emotion-15"
                    viewBox="0 0 20 20"
                  >
                    <path
                      d="M5.25 12a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H6a.75.75 0 0 1-.75-.75zM6 13.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V14a.75.75 0 0 0-.75-.75zM7.25 12a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H8a.75.75 0 0 1-.75-.75zM8 13.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V14a.75.75 0 0 0-.75-.75zM9.25 10a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H10a.75.75 0 0 1-.75-.75zm.75 1.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V12a.75.75 0 0 0-.75-.75zM9.25 14a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H10a.75.75 0 0 1-.75-.75zM12 9.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V10a.75.75 0 0 0-.75-.75zM11.25 12a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H12a.75.75 0 0 1-.75-.75zm.75 1.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V14a.75.75 0 0 0-.75-.75zM13.25 10a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H14a.75.75 0 0 1-.75-.75zm.75 1.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V12a.75.75 0 0 0-.75-.75z"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M5.75 2a.75.75 0 0 1 .75.75V4h7V2.75a.75.75 0 0 1 1.5 0V4h.25A2.75 2.75 0 0 1 18 6.75v8.5A2.75 2.75 0 0 1 15.25 18H4.75A2.75 2.75 0 0 1 2 15.25v-8.5A2.75 2.75 0 0 1 4.75 4H5V2.75A.75.75 0 0 1 5.75 2m-1 5.5c-.69 0-1.25.56-1.25 1.25v6.5c0 .69.56 1.25 1.25 1.25h10.5c.69 0 1.25-.56 1.25-1.25v-6.5c0-.69-.56-1.25-1.25-1.25z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`dateInputField > should test range 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: contents;
}

.emotion-2 {
  width: 100%;
}

.emotion-4 {
  display: inherit;
}

.emotion-4[data-container-full-height="true"] {
  height: 100%;
}

.emotion-4[data-container-full-width="true"] {
  width: 100%;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-8>.emotion-11 {
  color: #3f4250;
}

.emotion-8>.emotion-11::-webkit-input-placeholder {
  color: #727683;
}

.emotion-8>.emotion-11::-moz-placeholder {
  color: #727683;
}

.emotion-8>.emotion-11:-ms-input-placeholder {
  color: #727683;
}

.emotion-8>.emotion-11::placeholder {
  color: #727683;
}

.emotion-8[data-success='true'] {
  border-color: #22674e;
}

.emotion-8[data-error='true'] {
  border-color: #b3144d;
}

.emotion-8[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-8[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-8[data-disabled='true']>.emotion-11 {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11::placeholder {
  color: #b5b7bd;
}

.emotion-8:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-10 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-10[data-size='large'] {
  font-size: 1rem;
}

.emotion-10[data-size='small'] {
  padding-left: 0.5rem;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0 1rem;
  border-left: 1px solid;
  border-color: inherit;
}

.emotion-14 {
  vertical-align: middle;
  fill: #3f4250;
  height: 1.25rem;
  width: 1.25rem;
  min-width: 1.25rem;
  min-height: 1.25rem;
}

.emotion-14 .fillStroke {
  stroke: #3f4250;
  fill: none;
}

<div
    data-testid="testing"
  >
    <form
      class="emotion-0 emotion-1"
      novalidate=""
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          aria-controls="_r_1t_"
          aria-describedby="_r_1t_"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <div
            class="emotion-6 emotion-7"
          >
            <div>
              <div
                class="emotion-8 emotion-9"
                data-disabled="false"
                data-error="false"
                data-readonly="false"
                data-success="false"
              >
                <input
                  aria-invalid="false"
                  autocomplete="false"
                  class="emotion-10 emotion-11"
                  data-size="large"
                  id="_r_1u_"
                  name="test"
                  placeholder="YYYY-MM-DD"
                  type="text"
                  value="9/15/2022 - 9/18/2022"
                />
                <div
                  class="emotion-12 emotion-13"
                >
                  <svg
                    class="emotion-14 emotion-15"
                    viewBox="0 0 20 20"
                  >
                    <path
                      d="M5.25 12a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H6a.75.75 0 0 1-.75-.75zM6 13.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V14a.75.75 0 0 0-.75-.75zM7.25 12a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H8a.75.75 0 0 1-.75-.75zM8 13.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V14a.75.75 0 0 0-.75-.75zM9.25 10a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H10a.75.75 0 0 1-.75-.75zm.75 1.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V12a.75.75 0 0 0-.75-.75zM9.25 14a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H10a.75.75 0 0 1-.75-.75zM12 9.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V10a.75.75 0 0 0-.75-.75zM11.25 12a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H12a.75.75 0 0 1-.75-.75zm.75 1.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V14a.75.75 0 0 0-.75-.75zM13.25 10a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H14a.75.75 0 0 1-.75-.75zm.75 1.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V12a.75.75 0 0 0-.75-.75z"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M5.75 2a.75.75 0 0 1 .75.75V4h7V2.75a.75.75 0 0 1 1.5 0V4h.25A2.75 2.75 0 0 1 18 6.75v8.5A2.75 2.75 0 0 1 15.25 18H4.75A2.75 2.75 0 0 1 2 15.25v-8.5A2.75 2.75 0 0 1 4.75 4H5V2.75A.75.75 0 0 1 5.75 2m-1 5.5c-.69 0-1.25.56-1.25 1.25v6.5c0 .69.56 1.25 1.25 1.25h10.5c.69 0 1.25-.56 1.25-1.25v-6.5c0-.69-.56-1.25-1.25-1.25z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`dateInputField > should trigger events 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: contents;
}

.emotion-2 {
  width: 100%;
}

.emotion-4 {
  display: inherit;
}

.emotion-4[data-container-full-height="true"] {
  height: 100%;
}

.emotion-4[data-container-full-width="true"] {
  width: 100%;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-8>.emotion-11 {
  color: #3f4250;
}

.emotion-8>.emotion-11::-webkit-input-placeholder {
  color: #727683;
}

.emotion-8>.emotion-11::-moz-placeholder {
  color: #727683;
}

.emotion-8>.emotion-11:-ms-input-placeholder {
  color: #727683;
}

.emotion-8>.emotion-11::placeholder {
  color: #727683;
}

.emotion-8[data-success='true'] {
  border-color: #22674e;
}

.emotion-8[data-error='true'] {
  border-color: #b3144d;
}

.emotion-8[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-8[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-8[data-disabled='true']>.emotion-11 {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-8[data-disabled='true']>.emotion-11::placeholder {
  color: #b5b7bd;
}

.emotion-8:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-10 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-10[data-size='large'] {
  font-size: 1rem;
}

.emotion-10[data-size='small'] {
  padding-left: 0.5rem;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0 1rem;
  border-left: 1px solid;
  border-color: inherit;
}

.emotion-14 {
  vertical-align: middle;
  fill: #3f4250;
  height: 1.25rem;
  width: 1.25rem;
  min-width: 1.25rem;
  min-height: 1.25rem;
}

.emotion-14 .fillStroke {
  stroke: #3f4250;
  fill: none;
}

<div
    data-testid="testing"
  >
    <form
      class="emotion-0 emotion-1"
      novalidate=""
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          aria-controls="_r_6_"
          aria-describedby="_r_6_"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <div
            class="emotion-6 emotion-7"
          >
            <div>
              <div
                class="emotion-8 emotion-9"
                data-disabled="false"
                data-error="false"
                data-readonly="false"
                data-success="false"
              >
                <input
                  aria-invalid="false"
                  autocomplete="false"
                  class="emotion-10 emotion-11"
                  data-size="large"
                  id="_r_7_"
                  name="test"
                  placeholder="YYYY-MM-DD"
                  type="text"
                  value="9/15/2022"
                />
                <div
                  class="emotion-12 emotion-13"
                >
                  <svg
                    class="emotion-14 emotion-15"
                    viewBox="0 0 20 20"
                  >
                    <path
                      d="M5.25 12a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H6a.75.75 0 0 1-.75-.75zM6 13.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V14a.75.75 0 0 0-.75-.75zM7.25 12a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H8a.75.75 0 0 1-.75-.75zM8 13.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V14a.75.75 0 0 0-.75-.75zM9.25 10a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H10a.75.75 0 0 1-.75-.75zm.75 1.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V12a.75.75 0 0 0-.75-.75zM9.25 14a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H10a.75.75 0 0 1-.75-.75zM12 9.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V10a.75.75 0 0 0-.75-.75zM11.25 12a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H12a.75.75 0 0 1-.75-.75zm.75 1.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V14a.75.75 0 0 0-.75-.75zM13.25 10a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 .75.75v.01a.75.75 0 0 1-.75.75H14a.75.75 0 0 1-.75-.75zm.75 1.25a.75.75 0 0 0-.75.75v.01c0 .414.336.75.75.75h.01a.75.75 0 0 0 .75-.75V12a.75.75 0 0 0-.75-.75z"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M5.75 2a.75.75 0 0 1 .75.75V4h7V2.75a.75.75 0 0 1 1.5 0V4h.25A2.75 2.75 0 0 1 18 6.75v8.5A2.75 2.75 0 0 1 15.25 18H4.75A2.75 2.75 0 0 1 2 15.25v-8.5A2.75 2.75 0 0 1 4.75 4H5V2.75A.75.75 0 0 1 5.75 2m-1 5.5c-.69 0-1.25.56-1.25 1.25v6.5c0 .69.56 1.25 1.25 1.25h10.5c.69 0 1.25-.56 1.25-1.25v-6.5c0-.69-.56-1.25-1.25-1.25z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
